--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 29
     defaultConfig {
-        applicationId "com.danielmalone.dansecommerce"
+        applicationId "com.arunabhdas.dascommerce"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
